# PFE

./: .bashrc  .gitignore  .gitmodules  CATS'.perspective  InstallHuskyA300.md  Makefile  README.md  README_eng.md  README_fr.md  README_thomas.md  ReadMe.md  ReadMePlus.md  color_code.py  demoBebopIndoors.py  select_point_map.html  setup.sh  test.js  test_bpmn.js
Chunyu/auto_run/: 1.sh  2.sh  4.sh  5.sh
Chunyu/auto_run/1/1/: idle_final.txt
Chunyu/auto_run/1/2/: idle_final.txt  idle_initial.txt
Chunyu/auto_run/1/3/: idle_final.txt
Chunyu/auto_run/1/4/: idle_initial.txt
Chunyu/auto_run/1/5/: idle_final.txt  idle_initial.txt
Chunyu/auto_run/2/1/: tl_initial.txt
Chunyu/auto_run/2/3/: tl_final.txt  tl_initial.txt
Chunyu/auto_run/2/4/: tl_initial.txt
Chunyu/auto_run/2/5/: tl_initial.txt
Chunyu/auto_run/3/1/: hover_final.txt  hover_initial.txt
Chunyu/auto_run/3/2/: hover_final.txt
Chunyu/auto_run/3/4/: hover_initial.txt
Chunyu/auto_run/3/5/: hover_final.txt
Chunyu/无人机任务优化/: main.py  test.py  visualization.py
Code/User/: keybindings.json  settings.json
Code/User/globalStorage/: state.vscdb  state.vscdb.backup  storage.json
Code/User/workspaceStorage/043a8d9f1b2e1bea0c982a5129f5c3d2/: state.vscdb
Code/User/workspaceStorage/1756123480841/: state.vscdb
Code/User/workspaceStorage/1757938796783/: state.vscdb  state.vscdb.backup
Code/User/workspaceStorage/38b4a0eddad78b0c368191a60cdca999/: state.vscdb  workspace.json
Code/User/workspaceStorage/72cb92b4008ebe994bd164be5c624365/: state.vscdb  state.vscdb.backup
Code/User/workspaceStorage/806f655f9215260385b61ed9f5c601e5/: state.vscdb  workspace.json
Code/User/workspaceStorage/8fa9a9a69cf4380a23e6b36c8600080e/: state.vscdb
Code/User/workspaceStorage/d47559d37f4e65e1e212e839d2848d96/: state.vscdb  state.vscdb.backup  workspace.json
Code/User/workspaceStorage/dfbfa4ca3b4a90267b7d2fe10577d6a9/: state.vscdb  state.vscdb.backup  workspace.json
FAME/: schema_MRS_FAME.drawio
Modèle_batiment/: EXPORT_GOOGLE_SAT_WM.tif  batiment_s_ensta.stl  simple.world
Modèle_batiment/mon_batiment/: model.sdf
OptenRob/ENSTAOPTENROBlivrable_L110/: ENSTA-OPTENROB_L1-v1.docx
OptenRob/ENSTAOPTENROBlivrable_L110 /: UTF-8ENSTA-OPTENROB_L1.1.0.docx
Projet_chunyu/auto_run/: 3.sh
Projet_chunyu/auto_run/1/1/: idle_initial.txt
Projet_chunyu/auto_run/1/3/: idle_initial.txt
Projet_chunyu/auto_run/1/4/: idle_final.txt
Projet_chunyu/auto_run/2/1/: tl_final.txt
Projet_chunyu/auto_run/2/2/: tl_final.txt  tl_initial.txt
Projet_chunyu/auto_run/2/4/: tl_final.txt
Projet_chunyu/无人机任务优化/: extraction.py  mathematical_model.py
Simulation_Gazebo/: listen_state_from_tello.py  listen_state_from_tello_2.py  listener.py  multi_listener.py  set_tello_wifi.py
Simulation_Gazebo_new/: get_tello_state.py  listen_speed_tello.py  listen_state_from_tello_2.py
Simulation_Gazebo_new/tello_ros_ws/src/tello_ros/tello_nodes/: CMakeLists.txt  package.xml
Simulation_Gazebo_new/tello_ros_ws/src/tello_ros/tello_nodes/launch/: tello_control_node.py  tello_synchro_launch_cats.py  tello_synchro_launch_cats_2.py
auto_generation_gazebo_world/: script.py  script_V2.py
auto_generation_gazebo_world/OSM2World-latest-bin/resources/: osm2world_completion
bordel/: package.json  test.js
clearpath/: robot.yaml
clearpath/platform/launch/: platform-service.launch.py
clearpath/sensors/launch/: camera_0.launch.py  lidar2d_0.launch.py  lidar3d_0.launch.py  sensors-service.launch.py
clearpath_ahahah/clearpath/: robot.urdf.xacro  robot1.yaml  robot2.srdf  robot2.yaml
detection_de_fissures/: detection_fissures_test.py
detection_de_fissures/hsv_detector/HSV-Color-Detector-On-Images/: main.py
docker/: Dockerfile  ReadMe.md
documentations/: HARS-EvalOps An Operational Scenarios Benchmark to support Heterogeneous Autonomous Robot Swarms innovation roadmaps.doc
documentations/documentations_BPMN/: Fiches pratiques HOPEX V5 NAF 3.1 (NOV).docx
etude_plusieurs_drones/: comparaison_drones.odt
etude_plusieurs_drones/parrot_bebop/: bebop_controller.py  demo_indoor_bebop1.py  demo_indoor_bebop2.py  test_connexion.py
fame/: .gitignore  README.md
fame/fame_engine/: CMakeLists.txt
fame/fame_engine/launch/: my_CATS.py
fame/fame_engine/process/: DINGO.bpmn  Explore.bpmn  GoTo_old.bpmn  husky_a300.bpmn  husky_a300_odom.bpmn  res.bpmn  tello_2.bpmn
fame/fame_engine/src/: controller.js
fame/fame_simulation/launch/: multi_launch.py
fame_CATS/fame_agricultural/: CMakeLists.txt
fame_CATS/fame_agricultural/launch/: spawn_elements.py
fame_CATS/fame_engine/: package.json
fame_CATS/fame_engine/process/: GoTo.bpmn
fame_CATS/fame_simulation/launch/: spawn_elements.py
fame_CATS/fame_simulation/worlds/: simple.world
husky_ws/: ReadMe.md  gazebo_cats.launch.py
husky_ws/husky/husky_base/: CMakeLists.txt  husky_hardware_plugin.xml
line_follow/: first_GPT.py  force.py  list_available_cam.py  opencv_info.py  second_GPT.py  sus.py  test_cam.py  third_with_cam_choice.py  xtion_pro.py
my_FaMe/fame_engine/process/: husky_a300_GPT_mine.bpmn
scenarios_op_tello/: ObstacleDetector.py  commande_tello.py  path_planning.py  waypoint.json
scenarios_op_tello/tour_de_table/: tour_de_table_lineaire.py  tour_de_table_sinusoide.py
tello_SDK/: control_manette.py  control_manette_multiple.py  ctrl_man_mul.py  someaze.py  tache_un_tello_sdk_test.py  tello_sdk_test.py  test.py  test_detection_manette.py  test_video_tello_sdk.py  watcher.py
tello_edu_swarms/: cmds-01.txt  cmds-02.txt  cmds-05.txt  cmds-06.txt  cmds-07.txt  set-ap-mode.py  swarm.py  tello.py  test_tello_router.py
tello_msgs/tello_description/: CMakeLists.txt
tello_msgs/tello_driver/: CMakeLists.txt  package.xml
tello_msgs/tello_driver/h264decoder/: h264decoder.cpp  h264decoder.hpp
tello_msgs/tello_msgs/msg/: TelloPosition.msg
tello_visual_tracking/: tello_main.py
wtf/: index.js  package.json  process.bpmn
wtf2/: bundle.bpmn  bundle_and_run.js  call_with_subprocess.bpmn  process_cond.bpmn  run_call_activity.js  say_call.bpmn  tello.bpmn
(+235 files in other folders)
