<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

    <name>tello_driver</name>
    <version>0.1.0</version>
    <description>Tello ROS driver</description>

    <maintainer email="clyde@mcqueen.net">Clyde McQueen</maintainer>
    <license>BSD</license>

    <url type="repository">https://github.com/clydemcqueen/tello_ros.git</url>
    <url type="bugtracker">https://github.com/clydemcqueen/tello_ros/issues</url>

    <author>Clyde McQueen</author>
    <author>Peter Mullen</author>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>camera_calibration_parsers</depend>
    <depend>class_loader</depend>
    <!-- <depend>cv_bridge</depend> -->
    <!-- <depend>rclcpp</depend> -->
    <depend>geometry_msgs</depend>
    <depend>ros2_shared</depend>
    <!-- <depend>sensor_msgs</depend> -->
    <depend>std_msgs</depend>
    <depend>tello_msgs</depend>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <build_depend>rclcpp</build_depend>
    <build_depend>rclcpp_components</build_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>image_transport</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>opencv</build_depend>

    <exec_depend>rclcpp</exec_depend>
    <exec_depend>rclcpp_components</exec_depend>
    <exec_depend>cv_bridge</exec_depend>
    <exec_depend>image_transport</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>opencv</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>
