<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

    <name>tello_nodes</name>
    <version>0.1.0</version>
    <description>Tello nodes to uses other packages.</description>
    <maintainer email="aurelien@couthures.de">CATS</maintainer>
    <license>WTFPL</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>geometry_msgs</depend>
    <depend>rclcpp</depend>
    <depend>std_msgs</depend>
    <depend>tello_msgs</depend>

    <exec_depend>ros2launch</exec_depend>
    
    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>
